2009-11-18  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/amfetchdump.c: Small memory leak.
	* restore-src/restore.c, restore-src/restore.h: Many change to fix
	  what was broken in previous patch.

2009-11-18  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c,
	  application-src/amstar.c: Fix if none of --disk or --device is set.

2009-11-18  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/tapefile.c: Fix if list_new_tapes return NULL.

2009-11-18  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c, server-src/driver.c,
	  server-src/planner.c: Do sanity check for DIRECT-TCP data-path.

2009-11-18  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c, application-src/ampgsql.pl,
	* application-src/amraw.pl, application-src/amsamba.pl,
	* application-src/amstar.c, application-src/amsuntar.pl,
	* application-src/amzfs-sendrecv.pl, application-src/amzfs-snapshot.pl:
	  They can get either --disk or --device or both.

2009-11-18  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/tapefile.c: New list_new_tapes function.
	* server-src/tapefile.h: Prototype for list_new_tapes function.
	* perl/Amanda/Tapelist.swg: swig of list_new_tapes.

2009-11-18  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndmjob.h, ndmp-src/ndmjob_main.c,
	  ndmp-src/ndmjob_main_util.c: Use g_debug for logging.

2009-11-18  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/directtcp-target.c
	  device-src/directtcp-target.h: Removed files.
	* device-src/device.c,
	  device-src/device.h: New device directtcp api.
	* device-src/directtcp-connection.c,
	  device-src/directtcp-connection.h: directtcp_connection and
	  directtcp_connection_socket object.
	* device-src/Makefile.am: Remove directtcp-target.*
				  Add directtcp-connection.*
	* restore-src/restore.c,
	  restore-src/restore.h: Fix for new device directtcp api.

2009-11-18  Jean-Louis Martineau <martineau@zmanda.com>