@@ -978,6 +978,7 @@ amgtar_restore(
     }
     g_ptr_array_add(argv_ptr, NULL);
 
+    debug_executing(argv_ptr);
     env = safe_env();
     become_root();
     execve(cmd, (char **)argv_ptr->pdata, env);
@@ -1007,6 +1008,7 @@ amgtar_validate(
     g_ptr_array_add(argv_ptr, stralloc("-"));
     g_ptr_array_add(argv_ptr, NULL);
 
+    debug_executing(argv_ptr);
     env = safe_env();
     execve(cmd, (char **)argv_ptr->pdata, env);
     e = strerror(errno);
